--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -1,30 +1,36 @@
 .body {
-  width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
+
+  width: 100%;
+  height: 100%;
+  
   background-color: #0e1621;
 }
 
 .header {
-  background-color: #17212b;
   position: relative;
+
+  background-color: #17212b;
   border-bottom: 1px solid #0e1621;
   color: #fff;
 }
 
 .content {
   display: flex;
+
+  flex-grow: 1;
   width: 100%;
-  height: 100%;
+
+  overflow: hidden;
 }
 
 .chatList {
-  position: relative;
   flex: 1 150px;
-  /* border-right: 1px solid #0e1621; */
+  
   background-color: #17212b;
   color: #fff;
+  overflow-y: auto;
 }
 
 .messageList {
