--- a/src/components/message-list/message-list.module.css
+++ b/src/components/message-list/message-list.module.css
@@ -1,32 +1,37 @@
-/* TODO Разобраться с полосой прокрутки для списка сообщений */
-
-.messageList {
+.messageListWrap {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  width: 100%;
-  position: relative;
+  justify-content: space-between;
+
   height: 100%;
-  overflow: auto;
+}
+
+.messageList {
+  width: 100%;
+  height: 100%;;
+
+  display: flex;
+  flex-direction: column;
+  
+  overflow-y: auto;
 }
 
 .msgForm {
-  background-color: #1E2428;
-  width: 100%;
-  padding: 10px 0;
-  position: absolute;
-  bottom: 0;
   display: flex;
   justify-content: space-between;
+  
+  padding: 10px 0;
+  background-color: #1E2428;
 }
 
 .msgForm__input {
-  background-color: #32383B;
-  border-radius: 10px;
+  flex: 2;
+  
   margin: 0 10px;
   padding: 0 10px;
-  flex: 2;
-  /* width: 80%; */
+  
+  background-color: #32383B;
+  border-radius: 10px;
 }
 
 /* TODO Перенести стили в withStyles */
